--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,11 +2,17 @@
     <string name="app_name">Product Inventory</string>
     <string name="addProductTitle">Add Product</string>
     <string name="productDetailTitle">Product</string>
-    <string name="add">Add product</string>
-    <string name="noItem">Click on add product button to start</string>
-    <string name="productN">Product name:</string>
-    <string name="productQuantity">Product quantity:</string>
-    <string name="productPrice">Product price:</string>
-    <string name="itemSold">Num of item Sold:</string>
-    <string name="supEmail">Supplier email:</string>
+    <string name="add">Add Item</string>
+    <string name="noItem">Tap ADD ITEM to start</string>
+    <string name="productName">Item: </string>
+    <string name="productStock">Quantity: </string>
+    <string name="productPrice">Item price: $</string>
+    <string name="itemSold">Item Sales: $</string>
+    <string name="supEmail">Contact Info: </string>
+    <string name="order_btn">Order</string>
+    <string name="product_image_description">Product Image</string>
+    <string name="add_product_name_hint">Product name here</string>
+    <string name="add_product_price_hint">Product Price</string>
+    <string name="add_product_quantity">Product Quantity</string>
+    <string name="add_supplier_contact">Supplier email</string>
 </resources>
