Working except for weird flip of stock and sold

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,8 @@
     <string name="add_product_price_hint">Product Price</string>
     <string name="add_product_quantity">Product Quantity</string>
     <string name="add_supplier_contact">Supplier email</string>
+    <string name="menu_alert_title">Delete All Data</string>
+    <string name="menu_delete_warning">Are you sure you want to delete your entire inventory?</string>
+    <string name="menu_confirm_btn">Confirm</string>
+    <string name="menu_cancel_btn">Cancel</string>
 </resources>
